# production-ai-engineering-field-guide

./: .env.example  .gitignore  LEARNING_GUIDE.md  README.md  pyproject.toml
.github/workflows/: pages.yml
curriculum/: 01_harness_engineering.md  02_context_engineering.md  03_caching.md  04_inference_stack.md  05_structured_outputs_tools.md  06_agents.md  07_rag.md  08_evals.md  09_observability_cost.md  10_safety_tenancy.md  11_production_tradeoffs.md  README.md
evals/: adversarial_cases.jsonl  golden_set.jsonl
examples/: capstone_assistant.py
labs/01_harness_engineering/: run.py
labs/02_context_engineering/: run.py
labs/03_caching/: run.py
labs/04_structured_outputs/: run.py
labs/05_tool_calling/: run.py
labs/06_rag/: run.py
labs/07_evals_observability/: run.py
labs/08_agent_budgets/: run.py
labs/09_inference_stack/: run.py
labs/10_safety_tenancy/: run.py
site/: app.js  index.html  styles.css
src/ai_engineering_basics/: __init__.py  agents.py  caching.py  context.py  evals.py  inference.py  models.py  observability.py  rag.py  routing.py  safety.py  schemas.py  tools.py  tracing.py
tests/: test_primitives.py
